@@ -18,7 +18,6 @@ This also open source software.  The code can be modified by anyone who wishes t
 ## **Stuff that Remains Untested**
 
 * Automatic deletion of user accounts on owner change.
-* First stats in a new season.
 
 
 ## **Future Plans**
